Fix issue with pop over hiding behind tile maps

--- a/src/core_plugins/kibana/public/dashboard/styles/index.less
+++ b/src/core_plugins/kibana/public/dashboard/styles/index.less
@@ -276,10 +276,15 @@ dashboard-panel {
       }
     }
 
+    /**
+     * 1. For tile maps, this is necessary to get the panel pop over to show up. Otherwise the tilemap ends up having
+     * a bigger z-index than the pop over.
+     */
     .panel-content {
       display: flex;
       flex: 1 1 100%;
       height: auto;
+      z-index: 1; /* 1. */
     }
   }
 
